src/test/deca/context/valid/created/methode_surchage2.deca
//Description :
// Redef de methode
//
// Resultats :
// Erreur


class Premiere {
    int x = 2;
    protected float y = 3;

    void blabla(int b){
    print(b);
    }

}

class Second extends Premiere {

  void blabla(int a){
  print(a);
  }

}
