src/test/deca/context/invalid/created/void-parameter2.deca
//Description :
// Methode avec paramètre de type void
//
// Resultats :
// Erreur

class A {

    int methode(int a, void x, float b) {
        println("C'est non");
    }
}


{
    
}